@@ -429,6 +429,54 @@ argument_list|,
 literal|"//*[@numFound='3']"
 argument_list|)
 expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"relying on ALTQ from config"
+argument_list|,
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"dismax"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"id:666"
+argument_list|,
+literal|"facet"
+argument_list|,
+literal|"false"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='1']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"explicit ALTQ"
+argument_list|,
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"dismax"
+argument_list|,
+literal|"q.alt"
+argument_list|,
+literal|"id:blahbalh"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"id:666"
+argument_list|,
+literal|"facet"
+argument_list|,
+literal|"false"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='0']"
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|testOldStyleDefaults
 specifier|public
